# idgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  derivation.nix  idgen.pc.cmakein  meson.build  shell.nix
include/idg/: combination_registry.hpp  permutation_identifier.hpp  permutation_registry.hpp  type_identifier.hpp  type_registry.hpp
include/idg/detail/: common.hpp  identity.hpp  registration.hpp  type_sorter.hpp  util.hpp
nix/: nameof.nix
tests/: CMakeLists.txt  combination.cpp  permutation.cpp  type.cpp
